# 2018-JRC-robot

./: README.md
JDX-机械臂气动吸附控制+30cm丝杠升降控制+磁铁闭合控制--2018.12.07/程序/: Readme.txt
catkin_ws_base/: .ycm_extra_conf.py
catkin_ws_base/devel/: .catkin  .rosinstall  setup.sh
catkin_ws_base/src/id_data_msgs/: CMakeLists.txt  id_data_msgs  package.xml
catkin_ws_base/src/id_data_msgs/msg/: ID_Data.msg  forceData.msg
底盘控制+ROS通信--2018.12.15/: JLinkLog.txt  RM2016 Infantry.uvgui.10510  RM2016 Infantry.uvgui.Administrator  RM2016 Infantry.uvgui.suyun  RM2016 Infantry.uvgui_Administrator.bak  RM2016 Infantry.uvopt  RM2016 Infantry.uvproj  RM2016 Infantry_Target 1.dep  RM2016 Infantry_uvopt.bak  RM2016 Infantry_uvproj.bak  程序进度说明.txt
底盘控制+ROS通信--2018.12.15/APP/: Can1BusTask.c  Can1BusTask.h  Can2BusTask.c  Can2BusTask.h  ControlTask.c  ControlTask.h  RemoteTask.c  RemoteTask.h  SuperviseTask.c  arm_control.c  arm_control.h
底盘控制+ROS通信--2018.12.15/BSP/: bsp.c  can1.c  can1.h  can2.c  can2.h  encoder.c  gun.c  gun.h  laser.c  laser.h  led.c  led.h  timer.c  usart1.c  usart1.h  usart3.c  usart3.h
底盘控制+ROS通信--2018.12.15/Listings/: RM2016_Infantry.map  startup_stm32f4xx.lst
底盘控制+ROS通信--2018.12.15/MPU6050/: imu.c  mpu6050_driver.c  mpu6050_interrupt.c
底盘控制+ROS通信--2018.12.15/Outputs/: RM2016 Infantry_Target 1.dep  RM2016_Infantry.axf  RM2016_Infantry.build_log.htm  RM2016_Infantry.hex  RM2016_Infantry.htm  RM2016_Infantry.lnp  arm_control.crf  arm_control.d  bsp.crf  bsp.d  bsp_flash.crf  bsp_flash.d  can1.crf  can1.d  can1bustask.crf  can1bustask.d  can2.crf  can2.d  can2bustask.crf  can2bustask.d  canbustask.crf  canbustask.d  controltask.crf  controltask.d  delay.crf  delay.d  encoder.crf  encoder.d  exti.crf  exti.d  gun.crf  gun.d  imu.crf  imu.d  iotask.crf  iotask.d  laser.crf  laser.d  led.crf  led.d  (+54 more)
底盘控制+ROS通信--2018.12.15/User/: JY901.h  main.c  main.h
(+229 files in other folders)
